# validation

./: Doxyfile  draft20170209.7z  draft20170223.7z  draft20170301-2.7z  draft20170301.7z  draft20170302.7z  draft20170304.7z  draft20170306-2.7z  draft20170306.7z  draft20170307-2.7z  draft20170307.7z  draft20170308.7z  draft20170309.7z  draft20170311.7z  experiment result.xlsx
camera-ready/: Reponses to queries.docx  TC-2016-10-0714.aux  TC-2016-10-0714.bbl  TC-2016-10-0714.blg  TC-2016-10-0714.tex  bibfile.bib  chan_avatar.eps  io_cmp.eps  pdu_cmp.eps  pdu_cmp2.eps
code/: CMakeLists.txt  readme.md
code.old/em/src/: .klcpa_em_opt.h.swo  .klcpa_em_opt.h.swp  .lcpa_em2.h.swo  .lcpa_em2.h.swp  CMakeLists.txt  klcpa_em.cpp  klcpa_em.h  klcpa_em_opt.cpp  klcpa_em_opt.h  lcpa_em.cpp  lcpa_em.h  lcpa_em2.cpp  lcpa_em2.h
code.old/mpi/src.bak/: .lcpa_mpi.h.swp  CMakeLists.txt  lcpa_mpi.cpp  lcpa_mpi.h
code.old/ram/: CMakeLists.txt
code.old/ram/src/: CMakeLists.txt  lcpa_ram.cpp  lcpa_ram.h  lcpa_ram_mpi.h
code/src/: .validate3.h.swp  CMakeLists.txt  test.h  validate.cpp  validate.h  validate2.h  validate3.cpp  validate3.h  validate4.cpp  validate4.h  validate4.h.bak
code/src/common/: .common.h.swp  async_stream_reader.h  async_stream_writer.h  basicio.h  common.h  namespace.h  tuples.h  types.h  widget.h
code/src/ma/: validate.h
code/src/mb/: validate2.cpp  validate2.h
code/src/methodA/: CMakeLists.txt  validate.cpp
code/src/methodB/: CMakeLists.txt
code/src/utility/: .async_stream_reader.h.swo  .async_stream_reader.h.swp  asycnio.h  async_stream_reader.h  async_stream_writer.h  asyncio.h  basicio.h  sorter.h  syncio.h
draft/: Response to review comments.docx  appendix.aux  appendix.tex  bibfile.bib  cover-letter.docx  ct_cmp.eps  ct_cmp2.eps  ct_cmp2.fig  draft.aux  draft.bbl  draft.blg  draft.tex  example.docx  gnong_avatar.eps  io_cmp.eps  io_cmp2.eps  pdu_cmp.eps  pdu_cmp2.eps  response to review comments.docx  ywu_avator.eps
draft-abandon/: bibfile.bib  cover-letter.docx  ct_cmp.eps  draft.aux  draft.tex  pdu_cmp2.eps  pdu_cmp2.fig  response to review comments.docx
draft-alternative/: draft.aux  draft.bbl  draft.tex  example.docx  pdu_cmp.eps
draft-first submission/: draft.bbl  example.docx
draft-major revision/: example2.docx  io_cmp2.eps
draft-new/: Response to review comments.docx  cover-letter.docx  draft.aux  draft.tex  draft.tex.old  pdu_cmp.fig
draft-old/: ct_cmp.fig  draft.tex  io_cmp.eps  io_cmp.fig  io_cmp2.fig  response to review comments.docx
experiment/: ct_cmp.fig  ct_cmp2.eps  ct_cmp2.fig  experiment result.xlsx  experiment-draw.docx  io_cmp.fig  io_cmp2.fig  pdu_cmp.fig  pdu_cmp2.fig
(+351 files in other folders)
